methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:12: error: value b is not a member of object java.awt.Color
  if (getCouleurSol()==Color.b){
                             ^